# VolumePad

./: .gitignore  README.md  volumepad.code-workspace
code/: audio_control.py  code.ino  main.py  pyproject.toml
code/board/: board.ino  code.ino  order.h  parameters.h
code/host/: aserial.py  audio_control.py  constants.py  main.py  pulse_test.py  pyproject.toml
code/playground/capacitiveTest/: capacitiveTest.ino
pcb/: pcb-B_Cu.gbr  pcb-B_Mask.gbr  pcb-B_SilkS.gbr  pcb-Edge_Cuts.gbr  pcb-F_Cu.gbr  pcb-F_Mask.gbr  pcb-F_SilkS.gbr  pcb-NPTH.drl  pcb-PTH.drl  pcb-cache.lib  pcb-job.gbrjob  pcb-rescue.lib  pcb.drl  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  pcb.pro  pcb.sch  pcb_lib.dcm  pcb_lib.lib
pcb/gerber/: pcb-B_Cu.gbr  pcb-B_Mask.gbr  pcb-B_SilkS.gbr  pcb-Edge_Cuts.gbr  pcb-F_Cu.gbr  pcb-F_Mask.gbr  pcb-F_SilkS.gbr  pcb-NPTH.drl  pcb-PTH.drl
pcb/pcb.pretty/: QwiicProMicroUSBC.kicad_mod  motorized_fader.kicad_mod
