[tool.poetry]
name = "volumepad"
version = "0.1.0"
description = ""
authors = ["Quint van Dijk <quintvdijk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
robust-serial = "^0.1"
pulsectl = "^22.3.2"
pyserial = "^3.5"
aioserial = "^1.3.1"
pulsectl-asyncio = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ruff = "^0.0.210"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
